# program-m-faran

./: PROJECT_DESCRIPTION.md
anchor_project/: README.md
anchor_project/single-winner-d21-voting/: Anchor.toml  package-lock.json  package.json
anchor_project/single-winner-d21-voting/programs/single-winner-d21-voting/: Cargo.toml
anchor_project/single-winner-d21-voting/programs/single-winner-d21-voting/src/: errors.rs  events.rs  lib.rs  state.rs
anchor_project/single-winner-d21-voting/programs/single-winner-d21-voting/src/instructions/: cast_vote.rs  initialize_election.rs  mod.rs  tally_results.rs
anchor_project/single-winner-d21-voting/tests/: single-winner-d21-voting.ts
frontend/: README.md
